--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/Payslipdialog.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/Payslipdialog.css
@@ -1,10 +1,10 @@
-.modal-overlay {
+/* .modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4); /* semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.4); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,4 +85,4 @@
   .uploadpayslip-button-cancel:hover {
     transform: scale(1.1);
   }
-  
+   */
