--- a/Insurance-app-main/src/Components/Dashboard/Userdata.css
+++ b/Insurance-app-main/src/Components/Dashboard/Userdata.css
@@ -1,73 +1,80 @@
 .admin-slidebar {
   background: rgb(239, 238, 238);
   height: 100vh;
-  width: 20%;
+  width: 15%;
   position: fixed;
   left: 0;
-  top: 9%;
+  top: 0;
+  box-shadow: 1px 5px 10px  rgba(0, 0, 0, 0.5);
 }
 
 .toggle-slidebar{
   background: rgb(239, 238, 238);
   height: 100vh;
-  width: 10%;
+  width: 5%;
   position: fixed;
   left: 0;
-  top: 9%;
+  top: 0;
+  box-shadow: 1px 3px 10px  rgba(0, 0, 0, 0.5);
+  transition: width 0.3s ease;
+  overflow: hidden;
 }
 
 .userdata-container {
-  margin-left: 20%;
+  margin-left: 15%;
   height: 100vh;
 }
 
 .toggle-container {
-  margin-left: 10%;
+  margin-left: 5%;
   height: 100vh;
-}
-
-.userdata-btn {
-  cursor: pointer;
-  background: none;
-  border: none;
-  font-size: 18px;
-  width: 100%;
-  padding: 7px;
-  gap: 20px;
 }
 
 .user-list {
   list-style: none;
+  padding: 4px 3px 4px 3px;
 }
 
-.dashboard-icon:hover {
-  font-size: 20px;
-  color: rgb(2, 2, 70);
-  font-weight: bold;
+.list-style{
+  list-style: none;
+  border-radius: 5px;
+  padding: 12px;
+  cursor: pointer;
 }
 
-.user-profile .userheader {
-  position: absolute;
-  left: 0;
-  letter-spacing: 2px;
-  color: goldenrod;
-  font-variant: small-caps;
-  font-size: 2rem;
+.list-style:hover{
+  background-color: rgba(0, 0, 0, 0.19);
 }
 
-.user-profile .userheader .caps {
-  font-weight: bold;
-  color: rgb(2, 2, 73);
-  font-size: 2.2rem;
+.dashboardicons {
+  font-size: 25px;
+  color: rgba(0, 0, 0, 0.741);
+  cursor: pointer;
+}
+
+.userdata-head{
+  padding: 15px;
 }
 
 .user-profile {
   background-color: rgb(239, 238, 238);
   top: 0;
-  left: 0;
+  right: 0;
   display: flex;
   justify-content: flex-end;
-  width: 100%;
+  width: 85%;
+  padding: 20px;
+  gap: 10px;
+  position: fixed;
+}
+
+.toggle-profile {
+  background-color: rgb(239, 238, 238);
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: flex-end;
+  width: 95%;
   padding: 20px;
   gap: 10px;
   position: fixed;
@@ -75,7 +82,6 @@
 
 .userlogout-btn {
   position: relative;
-  right: 5%;
   font-size: 20px;
   display: flex;
   align-items: center;
@@ -106,23 +112,69 @@
   font-size: 23px;
 }
 
-.user-list .dashboardicons {
-  font-size: 30px;
-  color: black;
-  cursor: pointer;
-}
-
 .sidebarmenu-btn{
   border: none;
   display: none;
 }
 
 .dashboard-menu{
-  position: absolute;
-  left: 20%;
   background: none;
   border: none;
   cursor: pointer;
+  transition: transform 0.5s ease-in-out;
+}
+
+.dashboard-menu:hover{
+  transform: scale(1.1);
+  background-color: rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+}
+
+.toggledashboard-menu{
+  background: none;
+  border: none;
+  transition: transform 0.5s ease-in-out;
+  transform: rotate(180deg);
+}
+
+.toggledashboard-menu:hover{
+  transform: rotate(180deg) scale(1.2);
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.19);
+}
+
+.userheader {
+  letter-spacing: 1px;
+  color: goldenrod;
+  font-variant: small-caps;
+  font-size: 1.5rem;
+  position: absolute;
+  left: 10px;
+  top: 15px;
+}
+
+.userheader .caps {
+  font-weight: bold;
+  color: rgb(2, 2, 73);
+  font-size: 2rem;
+}
+
+.user-heading{
+  display: flex;
+  justify-content:space-between;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.dashboard-menu-btn{
+  font-size: 35px;
+}
+
+.company-logo{
+  height: 45px;
+  width: 45px;
+  cursor: pointer;
+ 
 }
 
 @media only screen and (min-width:320px) and (max-width:768px) {
@@ -140,6 +192,15 @@
     font-size: 1rem;
   }
   .dashboard-menu{
+    display: none;
+  }
+  .user-profile {
+    width: 100%;
+  }
+  .toggle-profile {
+    width: 100%;
+  }
+  .toggle-profile .userlogout-btn{
     display: none;
   }
 }
@@ -176,7 +237,11 @@
     width: 10%;
     position: fixed;
     left: 0;
-    top: 9%;
+    top: 0;
+  }
+
+  .toggle-slidebar{
+    width: 10%;
   }
 
   .userdata-head{
@@ -185,6 +250,18 @@
 
   .dashboard-icon{
     display: none;
+  }
+
+  .user-heading{
+    display: none;
+  }
+
+  .user-profile {
+    width: 90%;
+  }
+
+  .toggle-profile {
+    width: 90%;
   }
 
   .user-list{
@@ -200,9 +277,14 @@
     height: 100vh;
   }
 
+  .toggle-container {
+    margin-left: 10%;
+    height: 100vh;
+  }
+
   .user-profile .userheader {
     position: absolute;
-    left: 10%;
+    left: 0;
     letter-spacing: 2px;
     color: goldenrod;
     font-variant: small-caps;
@@ -210,6 +292,12 @@
   }
   .dashboard-menu{
     display: none;
+  }
+
+  .user-list {
+    position: absolute;
+    top: 10%;
+    left: 10%;
   }
 
 }
@@ -222,14 +310,14 @@
   .admin-slidebar {
     background: rgb(239, 238, 238);
     height: 100vh;
-    width: 20%;
+    width: 15%;
     position: fixed;
     left: 0;
-    top: 9%;
+    top: 0;
   }
   .user-profile .userheader {
     position: absolute;
-    left: 0;
+    left: 5px;
     letter-spacing: 2px;
     color: goldenrod;
     font-variant: small-caps;
@@ -237,7 +325,7 @@
   }
 
   .userdata-head{
-    font-size: 25px;
+    font-size: 20px;
   }
 }
 
