--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
@@ -1,18 +1,25 @@
 .payslip-design {
-  height: 60vh;
+  height:100vh;
    padding: 30px 15px;
    max-width: 1200px;
    margin: auto;
    font-family: 'Segoe UI', sans-serif;
-   margin-bottom: 50px;
+   margin-top: -100px;
  }
+.payslip-file
+{
+  margin-top: 150px;
+ margin-left: 20px;
+ display: flex;
  
+
+}
  .portal {
-   text-align: center;
+ 
    font-size: 36px;
    font-weight: 700;
    color: #2c3e50;
-  
+  margin: auto;
  }
  
 
@@ -88,31 +95,20 @@
    background-color:rgb(34, 125, 161);
  }
  
- /* Payslip Output Section */
- .heading-payslip {
-   width: 90%;
-   margin: 0 auto 0 auto;
-   padding: 10px;
-   border-radius: 12px;
+
+  .heading-payslip {
+   width: 70%;
+   margin: 2rem auto;
+  border-radius: 5px;
    background-color: #ffffff;
    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.05);
- }
- .heading-payslip {
-  width: 60%;
-  margin: 2rem auto;
-  padding: 1rem;
-  border-radius: 12px;
-  font-family: 'Segoe UI', sans-serif;
-}
-
-.payslip-style {
-  margin-bottom: 40px;
-}
+  
+ } 
 
 .design,
 .bottom-design {
   width: 100%;
-  height: 30px;
+  height: 20px;
   position: relative;
   overflow: hidden;
 }
@@ -202,17 +198,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  gap: 1rem;
-  margin: 1.5rem 0;
+  gap: 10px;
+  margin: 5px 0;
 }
 
 .info-column {
   flex: 1;
-  
-  padding: 1rem;
+  padding: 2px;
   border-radius: 8px;
-
-  min-width: 250px;
+   min-width: 250px;
 }
 
 .info-column h4 {
