--- a/Insurance-app-main/src/Components/Admincreateform/Create.css
+++ b/Insurance-app-main/src/Components/Admincreateform/Create.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width:319px) and (max-width:400px){
+/* @media only screen and (min-width:319px) and (max-width:400px){
     .create-head{
         font-size: 18px;
         font-weight: bold;
@@ -32,4 +32,4 @@
     .create-form .user-btn{
         padding: 10px;
     }
-}
+} */
