--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/Userpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/Userpage.css
@@ -12,8 +12,8 @@
 }
 
 .dialog-content{
-    width: 30%;
-    height: 90%;
+    width: fit-content;
+    height: fit-content;
     background: white;
     border-radius: 15px;
     position: relative;
@@ -30,7 +30,7 @@
     cursor: pointer;
 }
 
-@media only screen and (min-width:319px) and (max-width:400px){
+/* @media only screen and (min-width:319px) and (max-width:400px){
     .dialog-content{
         width: 80%;
         height: 83%;
@@ -56,4 +56,4 @@
         width: 40%;
         height: 73%;
     }
-}
+} */
