--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
@@ -356,7 +356,7 @@
         color: green;
         cursor: pointer;
     }
-    .users-spinner{
+    /* .users-spinner{
         border: 4px solid  #f3f3f3;
         border-top: 4px solid #065c96;
         width: 40px;
@@ -364,7 +364,7 @@
         border-radius: 50%;
         animation: spin 1s linear infinite;
         margin: 50% auto;
-    }
+    } */
 }
 
 @media only screen and (min-width:501px) and (max-width:768px) {
