--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
@@ -203,6 +203,7 @@
     gap: 15px;
     justify-content:center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .searchbar{
@@ -364,7 +365,7 @@
         color: green;
         cursor: pointer;
     }
-    .spinner{
+    /* .spinner{
         border: 4px solid #f3f3f3;
         border-top:4px solid #065c96 ;
         border-radius: 50%;
@@ -372,6 +373,29 @@
         height: 40px;
         animation: spin 1s linear infinite;
         margin: 60% auto;
+    } */
+    .search-icon{
+        font-size: 17px;
+        color: #023265;
+    }
+    
+    .admin-head-search{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .searchbar{
+        display: flex;
+        gap: 10px;
+        align-items: center;
+    }
+    
+    .search-input{
+        padding: 2px 0 2px 0;
+        width: 200px;
+        border: 1px solid rgba(0, 0, 0, 0.7);
+        border-radius: 10px;
     }
 }
 
