--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Updatebox.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Updatebox.css
@@ -12,8 +12,8 @@
 }
 
 .form-content{
-    width: 28%;
-    height: 70%;
+    width: fit-content;
+    height: fit-content;
     position: relative;
     padding: 16px;
     background: white;
@@ -30,7 +30,7 @@
     cursor: pointer;
 }
 
-@media only screen and (min-width:319px) and (max-width:400px){
+/* @media only screen and (min-width:319px) and (max-width:400px){
     .form-content{
         width: 80%;
         height: 65%;
@@ -56,4 +56,4 @@
         width: 40%;
         height: 77%;
     }
-}
+} */
