--- a/Insurance-app-main/src/Components/Admincreateform/updatefile.css
+++ b/Insurance-app-main/src/Components/Admincreateform/updatefile.css
@@ -1,132 +1,5 @@
-/* .create-user-container {
-    width: 300px;
-    margin: 40px auto;
-    padding: 20px 16px;
-    background: #ffffff;
-    border-radius: 16px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.06);
-    border: 1px solid #e0e0e0;
-    transition: box-shadow 0.3s ease-in-out;
-    height: 83%;
-  } */
-  
-  /* .create-user-container:hover {
-    box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
-  }
-  
-  .create-user-container h3 {
-    font-size: 26px;
-    font-weight: 700;
-    margin-bottom: 24px;
-    text-align: center;
-    color: #222;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .form-group label {
-    font-weight: 600;
-    margin-bottom: 6px;
-    display: block;
-    color: #333;
-    font-size: 14px;
-  }
-  
-  .form-control {
-    width: 100%;
-    padding: 8px 11px;
-    font-size: 15px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    background-color: rgba(255, 255, 255, 0.9);
-    transition: border 0.3s ease, box-shadow 0.3s ease;
-  }
-  
-  .form-control:focus {
-    border-color: #1a73e8;
-    outline: none;
-    box-shadow: 0 0 6px rgba(26, 115, 232, 0.25);
-  }
-  
-  input[type="file"] {
-    font-size: 15px;
-    margin-top: 6px;
-    display: block;
-    color: #444;
-  }
-  
-  .user-btn {
-    background-color: #1a73e8;
-    color: #fff;
-    padding: 12px 20px;
-    border-radius: 8px;
-    border: none;
-    width: 30%;
-    font-weight: 600;
-    font-size: 15px;
-    transition: background-color 0.3s ease-in-out;
-   
-  }
-  
-  .user-btn:hover {
-    background-color: #155ab6;
-    cursor: pointer;
-  } */
-
-/* @media only screen and (min-width:319px) and (max-width:400px) {
-  .heading {
-    font-size: 18px;
-    font-weight: bold;
-  }
-
-  .update-label {
-    font-size: 14px;
-  }
+.update-admin-btn{
+  display: block;
+  color: white;
+  margin: auto;
 }
-
-@media only screen and (min-width:401px) and (max-width:500px) {
-  .heading {
-    font-size: 19px;
-    font-weight: bold;
-  }
-
-  .update-label {
-    font-size: 15px;
-  }
-
-  .updatebox .user-btn {
-    padding: 10px;
-  }
-}
-
-@media only screen and (min-width:501px) and (max-width:700px) {
-  .heading {
-    font-size: 19px;
-    font-weight: bold;
-  }
-
-  .update-label {
-    font-size: 15px;
-  }
-
-  .updatebox .user-btn {
-    padding: 10px;
-  }
-}
-
-@media only screen and (min-width:701px) and (max-width:800px) {
-  .heading {
-    font-size: 20px;
-    font-weight: bold;
-  }
-
-  .update-label {
-    font-size: 15px;
-  }
-
-  .updatebox .user-btn {
-    padding: 10px;
-  }
-} */
