--- a/Insurance-app-main/src/Components/Login/Login.css
+++ b/Insurance-app-main/src/Components/Login/Login.css
@@ -6,7 +6,7 @@
     width:100vw
 }
 
-.btn{
+.login-btn{
     margin: auto;
     display: block;
     padding: 10px;
@@ -15,7 +15,7 @@
     color: white;
 }
 
-.btn:hover{
+.login-btn:hover{
     background-color:royalblue;
     color: white;
 }
@@ -67,7 +67,7 @@
 
 
 @media screen and (max-width: 1440px) {
-    .btn {
+    .login-btn {
         width: 35%;
     }
 
@@ -86,7 +86,7 @@
 
 
 @media screen and (max-width: 768px){
-.btn {
+.login-btn {
     width: 40%;
 }
 
@@ -103,7 +103,7 @@
 
 
 @media screen and (max-width: 425px) {
-    .btn {
+    .login-btn {
         width: 80%;
         padding: 8px;
     }
@@ -119,7 +119,7 @@
 
 
 @media screen and (max-width: 375px) {
-    .btn {
+    .login-btn {
         width: 95%;
     }
 
@@ -133,7 +133,7 @@
     }
 }
 @media screen and (max-width: 320px) {
-    .btn {
+    .login-btn {
         width: 95%;
     }
 
