--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/Userpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/Userpage.css
@@ -9,15 +9,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 15px;
 }
 
 .dialog-content{
     width: fit-content;
-    height: fit-content;
+    /* height: fit-content; */
     background: white;
     border-radius: 15px;
     position: relative;
     padding: 20px;
+    max-height: 80%;
+    overflow-y: scroll;
 }
 
 .btn-close{
@@ -31,13 +34,10 @@
 }
 
 /* @media only screen and (min-width:319px) and (max-width:400px){
-    .dialog-content{
-        width: 80%;
-        height: 83%;
-    }
-}
+   
+} */
 
-@media only screen and (min-width:401px) and (max-width:500px){
+/*@media only screen and (min-width:401px) and (max-width:500px){
     .dialog-content{
         width: 60%;
         height: 75%;
