--- a/Insurance-app-main/src/Components/Admincreateform/Create.css
+++ b/Insurance-app-main/src/Components/Admincreateform/Create.css
@@ -1,4 +1,10 @@
-/* @media only screen and (min-width:319px) and (max-width:400px){
+.create-button{
+    display: block;
+    margin: auto;
+    color: white;
+}
+
+@media only screen and (min-width:319px) and (max-width:400px){
     .create-head{
         font-size: 18px;
         font-weight: bold;
@@ -8,28 +14,3 @@
     }
 }
 
-@media only screen and (min-width:401px) and (max-width:500px){
-    .create-head{
-        font-size: 18px;
-        font-weight: bold;
-    }
-    .create-label{
-        font-size: 15px;
-    }
-    .create-form .user-btn{
-        padding: 10px;
-    }
-}
-
-@media only screen and (min-width:701px) and (max-width:1000px){
-    .create-head{
-        font-size: 19px;
-        font-weight: bold;
-    }
-    .create-label{
-        font-size: 15px;
-    }
-    .create-form .user-btn{
-        padding: 10px;
-    }
-} */
