--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
@@ -193,10 +193,10 @@
     100% { transform: rotate(360deg); }
 }
 
-.search-icon{
+/* .search-icon{
     font-size: 25px;
     color: #023265;
-}
+} */
 
 .admin-head-search{
     display: flex;
@@ -213,10 +213,17 @@
 }
 
 .search-input{
-    padding: 5px 0 5px 0;
+    padding: 5px 0 5px 10px;
     width: 300px;
     border: 1px solid rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
+    border-radius: 50px;
+}
+
+.search-input::placeholder{
+    color: black;
+    font-size: bold;
+    position: absolute;
+    left: 15px;
 }
 
 .searchbar-res{
@@ -329,7 +336,7 @@
     }
     
     .admin-table tbody td{
-        padding: 5px;
+        padding: 5px 0 5px 0;
         border-bottom: 1px solid black;
     }
     
@@ -374,15 +381,9 @@
         color: green;
         cursor: pointer;
     }
-    /* .spinner{
-        border: 4px solid #f3f3f3;
-        border-top:4px solid #065c96 ;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 1s linear infinite;
-        margin: 60% auto;
-    } */
+    .spinner{
+        margin: auto;
+    }
     
     .searchbar{
         display: none;
@@ -416,7 +417,6 @@
     }
 
     .admin-table{
-        /* border: 1px solid black; */
         border-collapse:collapse;
         margin: auto;
         width: 100%;
@@ -463,7 +463,7 @@
     }
     
     .admin-table tbody td{
-        padding: 5px;
+        padding: 5px 0 5px 0;
         border-bottom: 1px solid black;
     }
     
@@ -480,7 +480,8 @@
     }
     
     .admintable-container{
-        height: 70vh;
+        height: fit-content;
+        max-height: 70vh;
         border: 1px solid black;
         width: 90%;
         margin: auto;
@@ -509,13 +510,7 @@
         cursor: pointer;
     }
     .spinner{
-        border: 4px solid #f3f3f3;
-        border-top:4px solid #065c96 ;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 1s linear infinite;
-        margin: 30% auto;
+        margin:auto;
     }
     .searchbar{
         display: none;
@@ -528,7 +523,7 @@
 }
 
 @media only screen and (max-width:768px) {
-     .admin-slidebar{
+    .admin-slidebar{
         display: none;
     }
     .toggle-slidebar{
